# if-decompiler

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
glulxtoc/: Cargo.toml  README.md
glulxtoc/src/: main.rs
glulxtoc/src/output/: files.rs  functions_common.rs  functions_safe.rs  functions_unsafe.rs  image.rs  mod.rs  templates.rs
glulxtoc/src/output/templates/: CMakeLists.txt  LICENSE  exec.c  glulxtoc.h  runtime.c  unixstrt.c
if-decompiler/: Cargo.toml  README.md
if-decompiler/src/: lib.rs
if-decompiler/src/glulx/: disassembler.rs  mod.rs  opcodes.rs
relooper/: Cargo.toml  README.md
relooper/src/: graph.rs  lib.rs  tests.rs
relooper/src/tests/: glulxercise.rs  inform6lib.rs  inform7.rs  mod.rs
tests/: advent.ulx.regtest  download.sh  glulxercise.ulx  glulxercise.ulx.gameinfo.dbg  glulxercise.ulx.regtest  prepare.sh  runalltests.sh  runtest.sh  runtests.sh
tools/: reduce-debug-xml.sh
