[package]
name = "glulxtoc"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
if-decompiler = {path = "../if-decompiler"}
relooper = {path = "../relooper"}
structopt = "0.3.13"