[package]
name = "glulxtoc"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
edition = "2018"
description = "Decompile Glulx storyfiles into C code"
homepage = "https://github.com/curiousdannii/if-decompiler"
license = "MIT"
repository = "https://github.com/curiousdannii/if-decompiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
dyn-fmt = "0.3.0"
fnv = "1.0.7"
if-decompiler = {path = "../if-decompiler", version = "0.1.0"}
quick-xml = "0.22"
relooper = {path = "../relooper", version = "0.1.0"}
structopt = "0.3.13"