[package]
name = "relooper"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
petgraph = "0.5.1"

[dev-dependencies]
maplit = "1.0.2"