[package]
name = "relooper"
version = "0.1.0"
authors = ["Dannii Willis <curiousdannii@gmail.com>"]
edition = "2018"
description = "Turn unstructured branches and jumps into structured blocks"
homepage = "https://github.com/curiousdannii/if-decompiler"
license = "MIT"
repository = "https://github.com/curiousdannii/if-decompiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
petgraph = "0.6.0"